--- a/apiRest (2)/build.gradle
+++ b/apiRest (2)/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.3.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'org.springframework.boot' version '2.4.3'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
 
-group = 'app'
+group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '8'
+sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
@@ -24,8 +24,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.mongodb:mongo-java-driver:3.4.2'
 }
-
-
 
 test {
     useJUnitPlatform()
